--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
-    "nuxt-primevue": "^3.0.0"
+    "@nuxt/types": "^2.17.3",
+    "@nuxt/typescript-build": "^3.0.2",
+    "nuxt-primevue": "^3.0.0",
+    "typescript": "^5.4.5",
+    "vue-tsc": "^1.8.27"
   }
 }
