--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primevue": "^3.52.0",
+    "quill": "^2.0.2",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2"
   },
