--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@primevue/themes": "^4.0.5",
     "axios": "^1.7.5",
     "nuxt": "^3.11.2",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
-    "primevue": "^3.52.0",
+    "primevue": "^4.0.5",
     "quill": "^2.0.2",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2"
@@ -22,7 +23,7 @@
   "devDependencies": {
     "@nuxt/types": "^2.17.3",
     "@nuxt/typescript-build": "^3.0.2",
-    "nuxt-primevue": "^3.0.0",
+    "@primevue/nuxt-module": "^4.0.5",
     "typescript": "^5.4.5",
     "vue-tsc": "^1.8.27"
   }
