--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@primevue/themes": "^4.0.5",
     "axios": "^1.7.5",
+    "crypto-js": "^4.2.0",
     "nuxt": "^3.11.2",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
